fixed about section on mobile screen

--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -81,9 +81,6 @@
     flex-direction: column;
   }
 
-  .aboutImage {
-    display: none;
-  }
 
   .aboutItems {
     margin-top: 29px;
@@ -104,6 +101,7 @@
 .hiddenLeft {
   opacity: 0;
   transform: translateX(-100%);
+  transition: opacity 0.5s, transform 0.5s;
 }
 
 .showRight {
@@ -115,4 +113,5 @@
 .hiddenRight {
   opacity: 0;
   transform: translateX(100%);
+  transition: opacity 0.5s, transform 0.5s;
 }
